--- a/conf/default_test.yaml
+++ b/conf/default_test.yaml
@@ -1,15 +1,21 @@
 # lightning.pytorch==2.0.0
 seed_everything: true
 trainer:
+  callbacks:
+    - class_path: lightning.pytorch.callbacks.ModelCheckpoint
+      init_args:
+        save_last: true
+        save_top_k: 1
+        monitor: v_acc
   accelerator: auto
   strategy: auto
   devices: auto
   num_nodes: 1
-  precision: 32-true
+  precision: 16-mixed
   logger: null
   callbacks: null
   fast_dev_run: false
-  max_epochs: null
+  max_epochs: 5
   min_epochs: null
   max_steps: -1
   min_steps: null
@@ -19,15 +25,15 @@ trainer:
   limit_test_batches: null
   limit_predict_batches: null
   overfit_batches: 0.0
-  val_check_interval: null
+  val_check_interval: 0.1
   check_val_every_n_epoch: 1
   num_sanity_val_steps: null
-  log_every_n_steps: null
+  log_every_n_steps: 5
   enable_checkpointing: null
   enable_progress_bar: null
   enable_model_summary: null
   accumulate_grad_batches: 1
-  gradient_clip_val: null
+  gradient_clip_val: 1
   gradient_clip_algorithm: null
   deterministic: null
   benchmark: null
@@ -39,7 +45,7 @@ trainer:
   plugins: null
   sync_batchnorm: false
   reload_dataloaders_every_n_epochs: 0
-  default_root_dir: null
+  default_root_dir: ckpt/test
 model:
   resnet_type: 34
   is_rq: true
@@ -57,13 +63,10 @@ model:
   resnet_insertion_index: 3
   lr: 0.0001
 data:
-  data_dir: "/home/figes/Downloads/ImageNet LSVRC 2012 Validation Set (Object Detection)/"
-  meta_dir: null
-  num_imgs_per_val_class: 50
+  data_dir: "/home/figes/Downloads/ILSVRC2012_CLS-LOC/"
   image_size: 224
   num_workers: 8
-  batch_size: 8
+  batch_size: 512
   shuffle: true
   pin_memory: true
   drop_last: false
-ckpt_path: ckpt/test/
