--- a/conf/insert_at_3.yaml
+++ b/conf/insert_at_3.yaml
@@ -50,23 +50,23 @@ model:
   resnet_type: 34
   is_rq: true
   quantizer_args:
-    num_quantizers: 8
+    num_quantizers: 4
     shared_codebook: true
-    quantize_dropout: true
+    quantize_dropout: false
     accept_image_fmap: true
     codebook_dim: 128
     codebook_size: 256
     decay: 0.8
     eps: 1.0e-05
-    commitment_weight: 100.0
+    commitment_weight: 0.0
     threshold_ema_dead_code: 0
-    sample_codebook_temp: 0.1
+    sample_codebook_temp: 0.0
   resnet_insertion_index: 3
   lr: 0.0005
 data:
   data_dir: "/home/figes/Downloads/ILSVRC2012_CLS-LOC/"
   image_size: 224
-  num_workers: 8
+  num_workers: 10
   batch_size: 512
   shuffle: true
   pin_memory: true
