--- a/conf/insert_at_4.yaml
+++ b/conf/insert_at_4.yaml
@@ -6,7 +6,7 @@ trainer:
       init_args:
         save_last: true
         save_top_k: 1
-        monitor: v_acc
+        monitor: v_c_loss
   accelerator: auto
   strategy: auto
   devices: auto
@@ -29,11 +29,11 @@ trainer:
   check_val_every_n_epoch: 1
   num_sanity_val_steps: null
   log_every_n_steps: 5
-  enable_checkpointing: null
+  enable_checkpointing: true
   enable_progress_bar: null
   enable_model_summary: null
   accumulate_grad_batches: 1
-  gradient_clip_val: 1
+  gradient_clip_val: 0.5
   gradient_clip_algorithm: null
   deterministic: null
   benchmark: null
@@ -45,7 +45,7 @@ trainer:
   plugins: null
   sync_batchnorm: false
   reload_dataloaders_every_n_epochs: 0
-  default_root_dir: ckpt/test
+  default_root_dir: ckpt/test_insert_at_4
 model:
   resnet_type: 34
   is_rq: true
@@ -58,11 +58,14 @@ model:
     codebook_size: 256
     decay: 0.8
     eps: 1.0e-05
-    commitment_weight: 10.0
-    threshold_ema_dead_code: 2
+    commitment_weight: 5.0
+    threshold_ema_dead_code: 1
     sample_codebook_temp: 0.0
-  resnet_insertion_index: 3
-  lr: 0.0003
+  resnet_insertion_index: 4
+  unfreeze_resnet_block_indeces:
+    - 3
+  unfreeze_fc: true
+  lr: 0.0002
 data:
   data_dir: "/home/figes/Downloads/ILSVRC2012_CLS-LOC/"
   image_size: 224
