added acc@1 and acc@5

--- a/conf/insert_at_3.yaml
+++ b/conf/insert_at_3.yaml
@@ -6,7 +6,7 @@ trainer:
       init_args:
         save_last: true
         save_top_k: 1
-        monitor: v_acc
+        monitor: v_acc_1
   accelerator: auto
   strategy: auto
   devices: auto
